# octopak

./: meson.build  readme.md
.app/: config
src/: install.vala  main.vala  main.vala~  meson.build  meson.build~  mkdirp.vapi
src/mkdirp/: mkdirp.c  mkdirp.h
